Truncate and some fixes

--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@
 	gap: 30px;
 	height: 100%;
 	width: 100%;
+	max-width: 1040px;
 }
 
 .all-repo-button {
